# scikit-build-stats

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
examples/scikit-build/: 20230921-skbc-wstars.csv  20230921-skbc.json  ComputeEachSKBC.ipynb  ProcessComputeSKBC.ipynb  README.md  scikit-build-analysis.ipynb  scikit-build-contents.json  scikit-build-core-analysis.ipynb  scikit-build-core-contents.json  scikit-build-core-info.ipynb  scikit-build-core.json  scikit-build-info.ipynb  scikit-build.json  skbc_known_packages.yaml  skbuild.ipynb  sourcegraph-search-export-context-global-scikit-build-core-path-pyproject-toml.csv  sourcegraph-search-export-context-global-skbuild-path-setup-py-count-2000.csv
src/scikit_build_stats/: __init__.py
